[workspace]
resolver = "2"
members = [
  "example/derive_expression/expression_lib",
  "example/extend_polars_python_dispatch/extend_polars",
  "example/io_plugin/io_plugin",
  "pyo3-polars",
  "pyo3-polars-derive",
]

[workspace.dependencies]
polars = { version = "0.44.2", default-features = false }
polars-core = { version = "0.44.2", default-features = false }
polars-ffi = { version = "0.44.2", default-features = false }
polars-plan = { version = "0.44.2", default-feautres = false }
polars-lazy = { version = "0.44.2", default-features = false }

[workspace.dependencies.arrow]
package = "polars-arrow"
version = "0.44.2"
path = "../polars/crates/polars-arrow"
default-features = false

[patch.crates-io]
polars = { git = "https://github.com/pola-rs/polars.git" , rev = "7c2d199ae3fc0e5f76511d61e1a08e4d7b8dd768"}
polars-core = { git = "https://github.com/pola-rs/polars.git" , rev = "7c2d199ae3fc0e5f76511d61e1a08e4d7b8dd768"}
polars-ffi = { git = "https://github.com/pola-rs/polars.git" , rev = "7c2d199ae3fc0e5f76511d61e1a08e4d7b8dd768"}
polars-plan = { git = "https://github.com/pola-rs/polars.git" , rev = "7c2d199ae3fc0e5f76511d61e1a08e4d7b8dd768"}
polars-lazy = { git = "https://github.com/pola-rs/polars.git" , rev = "7c2d199ae3fc0e5f76511d61e1a08e4d7b8dd768"}

