[workspace]
resolver = "2"
members = [
  "example/derive_expression/expression_lib",
  "example/extend_polars_python_dispatch/extend_polars",
  "example/io_plugin/io_plugin",
  "pyo3-polars",
  "pyo3-polars-derive",
]

[workspace.dependencies]
#polars = { version = "0.45.0", default-features = false }
#polars-core = { version = "0.45.0", default-features = false }
#polars-ffi = { version = "0.45.0", default-features = false }
#polars-plan = { version = "0.45.0", default-features = false }
#polars-lazy = { version = "0.45.0", default-features = false }

polars = { git = "https://github.com/mwiewior/polars.git" , branch = "feat/anonymous-scan-stream" }
polars-core = { git = "https://github.com/mwiewior/polars.git", branch = "feat/anonymous-scan-stream" }
polars-ffi = { git = "https://github.com/mwiewior/polars.git" , branch = "feat/anonymous-scan-stream"}
polars-plan = { git = "https://github.com/mwiewior/polars.git" , branch = "feat/anonymous-scan-stream"}
polars-lazy = { git = "https://github.com/mwiewior/polars.git" , branch = "feat/anonymous-scan-stream"}
minicbor = { version = "0.25.1", features = ["full"] }

[workspace.dependencies.arrow]
package = "polars-arrow"
version = "0.45.0"
path = "../polars/crates/polars-arrow"
default-features = false

#[patch.crates-io]
#polars = { git = "https://github.com/pola-rs/polars.git" }
#polars-core = { git = "https://github.com/pola-rs/polars.git" }
#polars-ffi = { git = "https://github.com/pola-rs/polars.git" }
#polars-plan = { git = "https://github.com/pola-rs/polars.git" }
#polars-lazy = { git = "https://github.com/pola-rs/polars.git" }
